--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,29 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
-  font-family: 'Old Standard TT', serif;
+  background: "#ffffff";
+  font-family: "Old Standard TT", serif;
+  /* background-image: url("/bg-aboutUs2.jpeg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover; */
+  position: relative;
+  overflow-x: hidden;
+}
+
+body::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  background-image: url("/bg-aboutUs2.jpeg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 @layer utilities {
@@ -36,7 +55,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url('/layered-waves-haikei.svg');
+  background-image: url("/layered-waves-haikei.svg");
 }
 
 .blob {
@@ -45,5 +64,5 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url('/blob-scene-haikei.svg');
+  background-image: url("/blob-scene-haikei.svg");
 }
