--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,8 @@ body {
   background-size: cover; */
   position: relative;
   overflow-x: hidden;
+  min-height: 100vh;
+  padding-bottom: 12em;
 }
 
 body::before {
