--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: "#ffffff";
-  font-family: "Old Standard TT", serif;
+  font-family: "Kameron";
   /* background-image: url("/bg-aboutUs2.jpeg");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -38,11 +38,12 @@ body::before {
   top: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.5;
-  background-image: url("/bg-aboutUs2.jpeg");
+  opacity: 0.6;
+  background-image: url("/fondo6.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  background-position: center;
 }
 
 @layer utilities {
