--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,8 +38,8 @@ body::before {
   top: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.6;
-  background-image: url("/fondoResize.jpg");
+  opacity: 0.5;
+  background-image: url("/fondoAlt2Resized.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
